--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "wgit",
   "version": "1.0.0",
+  "preferGlobal": true,
+  "bin": {
+    "clitools": "index.js"
+  },
   "description": "Just a cli for git",
   "main": "index.js",
   "scripts": {
@@ -15,5 +19,13 @@
   "bugs": {
     "url": "https://github.com/Mc01/wgit/issues"
   },
-  "homepage": "https://github.com/Mc01/wgit#readme"
+  "homepage": "https://github.com/Mc01/wgit#readme",
+  "dependencies": {
+    "chalk": "^1.1.1",
+    "cmd-exec": "^0.1.0",
+    "commander": "^2.9.0",
+    "findup-sync": "^0.3.0",
+    "path": "^0.12.7",
+    "string-format": "^0.5.0"
+  }
 }
