--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "wgit",
-  "version": "1.0.0",
+  "version": "0.1.3",
   "preferGlobal": true,
-  "bin": {
-    "clitools": "index.js"
-  },
   "description": "Just a cli for git",
-  "main": "index.js",
+  "main": "wgit.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,5 +24,11 @@
     "findup-sync": "^0.3.0",
     "path": "^0.12.7",
     "string-format": "^0.5.0"
+  },
+  "bin": {
+    "wgit": "wgit.js"
+  },
+  "engines": {
+    "node": ">= 0.10.x"
   }
 }
