--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.3",
   "preferGlobal": true,
   "description": "Just a cli for git",
-  "main": "wgit.js",
+  "main": "lib/wgit.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Mc01/wgit.git"
@@ -24,12 +24,17 @@
   },
   "devDependencies": {
     "ava": "^0.14.0",
+    "babel": "^6.5.2",
+    "babel-preset-es2015": "^6.6.0",
     "clear-require": "^1.0.1",
     "coveralls": "^2.11.9",
     "nyc": "^6.4.0"
   },
   "scripts": {
-    "start": "node wgit.js",
+    "develop": "babel -d lib/ src/ -w",
+    "compile": "babel -d lib/ src/",
+    "prestart": "npm run compile",
+    "start": "node lib/wgit.js",
     "test": "nyc ava",
     "report": "nyc report --reporter=html"
   },
