--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "babel-preset-es2015": "^6.6.0",
     "clear-require": "^1.0.1",
     "coveralls": "^2.11.9",
-    "nyc": "^6.4.0"
+    "jshint": "^2.9.1",
+    "nyc": "^6.4.0",
+    "precommit-hook": "^3.0.0"
   },
   "scripts": {
     "develop": "babel -d lib/ src/ -w",
@@ -36,10 +38,12 @@
     "prestart": "npm run compile",
     "start": "node lib/wgit.js",
     "test": "nyc ava",
-    "report": "nyc report --reporter=html"
+    "report": "nyc report --reporter=html",
+    "lint": "jshint ./src && jscs ./src",
+    "validate": "npm ls"
   },
   "bin": {
-    "wgit": "wgit.js"
+    "wgit": "lib/wgit.js"
   },
   "engines": {
     "node": ">= 0.10.x"
@@ -49,5 +53,9 @@
       "test/*.test.js"
     ],
     "failFast": true
-  }
+  },
+  "pre-commit": [
+    "lint",
+    "validate"
+  ]
 }
