--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.3",
   "preferGlobal": true,
   "description": "Just a cli for git",
-  "main": "lib/wgit.js",
+  "main": "lib/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Mc01/wgit.git"
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "ava": "^0.14.0",
-    "babel": "^6.5.2",
+    "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "clear-require": "^1.0.1",
     "coveralls": "^2.11.9",
