--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-es2015": "^6.6.0",
     "clear-require": "^1.0.1",
     "coveralls": "^2.11.9",
+    "jscs": "^3.0.3",
     "jshint": "^2.9.1",
     "nyc": "^6.4.0",
     "precommit-hook": "^3.0.0"
