--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ava": "^0.14.0",
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
+    "clear-require": "^1.0.1",
     "coveralls": "^2.11.9",
     "jscs": "^3.0.3",
     "jshint": "^2.9.1",
@@ -37,7 +38,6 @@
     "prestart": "npm run compile",
     "start": "node lib/index.js",
     "test": "npm run compile && nyc ava",
-    "test-debug": "npm run compile && nyc ava --serial --tap",
     "test-watch": "npm run compile && nyc ava --watch",
     "report": "nyc report --reporter=html",
     "lint": "jshint ./src && jscs ./src && jshint ./test && jscs ./test",
