--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "homepage": "https://github.com/Mc01/wgit#readme",
   "dependencies": {
+    "bluebird": "^3.3.5",
     "chalk": "^1.1.1",
     "cmd-exec": "^0.1.0",
     "commander": "^2.9.0",
