--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,9 @@
   "presets": "es2015",
   "ignore": [
     "./**/*.test.js"
+  ],
+  "plugins": [
+    "syntax-async-functions",
+    "transform-regenerator"
   ]
 }
