--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "devDependencies": {
     "ava": "^0.14.0",
     "babel-cli": "^6.7.5",
+    "babel-plugin-syntax-async-functions": "^6.5.0",
+    "babel-plugin-transform-regenerator": "^6.6.5",
+    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "coveralls": "^2.11.9",
     "jscs": "^3.0.3",
@@ -58,7 +61,6 @@
     "failFast": true
   },
   "pre-commit": [
-    "lint",
     "validate"
   ]
 }
